[package]
name = "discourse-nginx-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.8.5"
rocket = "0.5.0"
sha2 = "0.10.8"
url = "2.5.0"
urlencoding = "2.1.3"
